force-app/main/default/objects/Contact/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <label>Employee Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>