force-app/main/default/objects/Contact/fields/EmployeeRole__c.field-meta.xml
<CustomField>
    <fullName>EmployeeRole__c</fullName>
    <label>Employee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>