force-app/main/default/objects/Contact/fields/ReportingManager__c.field-meta.xml
<CustomField>
    <fullName>ReportingManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Reporting Manager)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>